--- a/style.css
+++ b/style.css
@@ -4,6 +4,11 @@
         }
         a{
             text-decoration: none;
+            transition: color 0.2s ease;
+            color: #4444aa;
+        }
+        a:hover{
+            color: #aaaaaa;
         }
         #site-title{
             height: fit-content;
@@ -85,4 +90,24 @@
         #footer-logo h3{
             margin-left: auto;
             margin-right: auto;
+        }
+
+        .btn{
+            display: inline-block;
+            padding: 0.5rem 1rem;
+            /* border: 0.1px solid #000000; */
+            border-radius: 50px;
+            box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.4);
+            transition: box-shadow 0.3s ease, color 0.3s ease;
+            color: #333333;
+
+        }
+        .btn:hover {
+            box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.4);
+            color: #aaaaaa;
+
+        }
+        .btn:active {
+            box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.4);
+            
         }
