--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,8 +9,7 @@
 <body class="opening-active"> <!-- ロゴ表示中はスクロール禁止クラスを初期付与 -->
 
     <!-- オープニングロゴ画面 (追加) -->
-    <div id="opening-overlay" style="display: none;">
-        <div class="opening-logo">
+D        <div class="opening-logo">
             <!-- ここを <img> タグに置き換えることも可能 -->
             STReam
         </div>
