--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -9,6 +9,8 @@
 <body class="opening-active"> <!-- ロゴ表示中はスクロール禁止クラスを初期付与 -->
 
     <!-- オープニングロゴ画面 (追加) -->
+    <!-- オープニングロゴ画面 (追加) -->
+    <div id="opening-overlay" style="display: none;">
         <div class="opening-logo">
             <!-- ここを <img> タグに置き換えることも可能 -->
             STReam
@@ -28,3 +30,6 @@
     <script src="{{ '/Scripts/default.js' | relative_url }}"></script>
 </body>
 </html>
+
+
+
